# SwissAgent

./: .gitignore  Chat.md  Dockerfile  README.md  docker-compose.yml  ideas.md  new implementations.md  pyproject.toml
.github/workflows/: build-native.yml
.swissagent/: chat_history.json
audio_pipeline/: tts_sfx.py
configs/: config.toml
core/: agent.py  agentic_agent.py  api_server.py  cli.py  config_loader.py  logger.py  module_loader.py  permission.py  plugin_loader.py  self_build.py  task_runner.py  tool_registry.py
dev_mode/: self_upgrade.py
docs/: AI_INTEGRATION_AUDIT.md  README.md  SETUP.md  self_iteration.md
electron/: README.md  launcher.html  main.js  package.json  preload.js
gui/: app.js  index.html  style.css
llm/: anthropic.py  api.py  base.py  factory.py  gemini.py  llamacpp.py  lmstudio.py  local.py  localai.py  ollama.py  openwebui.py  tabby.py
modules/ai_persona/: module.json  tools.json
modules/ai_persona/src/: ai_persona_tools.py
modules/animation/: module.json  tools.json
modules/animation/src/: animation.py
modules/api/: module.json  tools.json
modules/api/src/: api_client.py
modules/asset/: module.json  tools.json
modules/asset/src/: asset.py
modules/audio/: module.json  tools.json
modules/audio/src/: audio.py
modules/binary/: module.json  tools.json
modules/binary/src/: binary.py
modules/blender/: module.json  tools.json
modules/blender/src/: blender.py
modules/cache/: module.json  tools.json
modules/cache/src/: cache_manager.py
modules/ci/: module.json  tools.json
modules/ci/src/: ci.py
modules/database/: module.json  tools.json
modules/database/src/: database.py
modules/debug/: module.json  tools.json
modules/debug/src/: debug.py
modules/doc/: module.json  tools.json
modules/doc/src/: doc.py
modules/editor/: module.json  tools.json
modules/editor/src/: editor.py
modules/filesystem/: module.json  tools.json
modules/filesystem/src/: filesystem.py
modules/git/: module.json  tools.json
modules/git/src/: git_tools.py
modules/image/: module.json  tools.json
modules/image/src/: image_tools.py
modules/import_project/: module.json  tools.json
modules/import_project/src/: import_tools.py
modules/index/: module.json  tools.json
modules/index/src/: indexer.py
modules/installer/: module.json  tools.json
modules/installer/src/: installer.py
modules/job/: module.json  tools.json
modules/job/src/: job.py
modules/knowledge/: module.json  tools.json
modules/knowledge/src/: knowledge_tools.py
modules/memory/: module.json  tools.json
modules/memory/src/: memory.py
modules/network/: module.json  tools.json
modules/network/src/: network.py
modules/package/: module.json  tools.json
modules/package/src/: package.py
modules/pipeline/: module.json  tools.json
modules/pipeline/src/: pipeline.py
modules/profile/: module.json  tools.json
modules/profile/src/: profile.py
modules/project_profile/: module.json  tools.json
modules/project_profile/src/: profile_tools.py
modules/render/: module.json  tools.json
modules/render/src/: render.py
modules/resource/: module.json  tools.json
modules/resource/src/: resource.py
modules/roadmap/: module.json  tools.json
modules/roadmap/src/: roadmap_tools.py
modules/scaffold/: module.json  tools.json
modules/scaffold/src/: __init__.py  scaffold_tools.py
modules/script/: module.json  tools.json
modules/script/src/: script_runner.py
modules/security/: module.json  tools.json
modules/security/src/: security.py
modules/server/: module.json  tools.json
modules/server/src/: server.py
modules/shader/: module.json  tools.json
modules/shader/src/: shader.py
modules/template/: module.json  tools.json
modules/template/src/: template.py
modules/test/: module.json  tools.json
modules/test/src/: test_runner.py
modules/test_api_scaffold_mod/: module.json  tools.json
modules/test_api_scaffold_mod/src/: __init__.py  test_api_scaffold_mod_tools.py
modules/tile/: module.json  tools.json
modules/tile/src/: tile.py
modules/ui/: module.json  tools.json
modules/ui/src/: ui.py
modules/zip/: module.json  tools.json
modules/zip/src/: zip_tools.py
native/: CMakeLists.txt  README.md
native/assets/: app.manifest
native/scripts/: build.bat  build_all.sh  install-deps.ps1
native/src/: SwissAgent.rc  backend.hpp  main.cpp  resource.h  server.hpp  tray.hpp  webview.hpp
plugins/example/: plugin.json  tools.json
plugins/example/scripts/: main.py
plugins/open_webui_tool/: README.md  plugin.py
plugins/test_api_gen_plugin/: plugin.json  test_api_gen_plugin_plugin.py  tools.json
plugins/test_api_scaffold_plugin/: plugin.json  test_api_scaffold_plugin_plugin.py  tools.json
scripts/: docker-build.sh  install.sh  run_tests.py  setup.py
stable_diffusion/: stable_diffusion_interface.py
stage_manager/: stage_manager.py
templates/cpp/: template.json
templates/cpp/src/: CMakeLists.txt  main.cpp
templates/default/: template.json
templates/default/src/: main.py
templates/javascript/: template.json
templates/javascript/src/: index.js  package.json
templates/python/: template.json
templates/python/src/: main.py  pyproject.toml
tests/: test_api.py  test_core.py  test_filesystem.py  test_modules.py
tools/: build_runner.py  feedback_parser.py  media_pipeline.py  registry.py
workspace/: .tasks.json  Identifying-Potential-Risks-and-Mitigation-Strategies.md  KPIs.md  README.md  To-Finish.md  action-plan.md  breakdown-complex-tasks-into-smaller-steps.md  check-system-logs.md  clarify-testing-scope-and-requirements.md  data-flow-diagram.md  data-flow.md  manager.py  prioritize-actions.md  prioritize-objectives.md  roadmap.json  task-list.json  tasks.json  tasks.md  team.md  test.env  test_export.env  test_import.env  test_notfound.env  workspace.json
workspace/documentation/: findings.txt
workspace/sample_project/: CMakeLists.txt  project.json
workspace/sample_project/src/cpp/: main.cpp
workspace/sample_project/src/go/: main.go
workspace/sample_project/src/js/: main.js
(+5 files in other folders)
